# Robot-Camera-Pick-and-Place-System

./: README.md
RobotPackages/Drivers/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur_common.launch
RobotPackages/Drivers/ur_driver_calibration/: CMakeLists.txt  package.xml
RobotPackages/Drivers/ur_driver_calibration/etc/: robot_calibration_11_feb.yaml  robot_calibration_7_dec.yaml
RobotPackages/Drivers/ur_driver_calibration/launch/: ur5_bringup_2014350432_calib.launch  ur5_bringup_calib.launch
RobotPackages/SystemPackages/wntu3/: CMakeLists.txt  package.xml
RobotPackages/SystemPackages/wntu3/launch/: display.launch  gazebo.launch
RobotPackages/SystemPackages/wntu3/meshes/: astra_link.STL  gripper_link.STL  holder_link.STL  rbase_link.STL  wstation_link.STL
RobotPackages/SystemPackages/wntu3/urdf/: astra_camera_macro.xacro  robot_workspace.urdf  wntu3.urdf.xacro
RobotPackages/SystemPackages/wntu3_moveit/: .setup_assistant  CMakeLists.txt  demo2.py  demo3.py  mv1.py  package.xml
RobotPackages/SystemPackages/wntu3_moveit/config/: ros_controllers.yaml  wntu3.srdf
RobotPackages/SystemPackages/wntu3_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo2.launch  demo_gazebo.launch  eih_result.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  wntu3_moveit_controller_manager.launch.xml
VisionPackages/Drivers/realsense-ros/realsense2_camera/launch/: rs_camera.launch
VisionPackages/Drivers/realsense-ros/realsense2_camera/params/: l515.yaml
VisionPackages/Drivers/ros_astra_camera/calibration/ir/: astra_mini_ir.yaml
VisionPackages/Drivers/ros_astra_camera/calibration/rgb/: astra_mini_rgb.yaml
VisionPackages/Drivers/ros_astra_camera/launch/: astra.launch  astra_eye_in_hand.launch  astra_eye_on_base.launch  astra_test.launch  multi_astra.launch  multi_astra_double_cam.launch  multi_astra_eye_in_hand.launch  multi_astra_eye_on_base.launch
VisionPackages/Drivers/ros_astra_camera/launch/includes/: astra_frames.launch  astra_frames_eye_in_hand.launch  astra_frames_eye_on_base.launch
VisionPackages/SystemPackages/DataTrainingPackages/: commands_for_darknet.txt
VisionPackages/SystemPackages/DataTrainingPackages/darknet/: .gitignore  Makefile  bad.list
VisionPackages/SystemPackages/DataTrainingPackages/darknet/cfg/: sticks_yolov3.cfg  yolov3.cfg
VisionPackages/SystemPackages/DataTrainingPackages/darknet/data/: train.txt
VisionPackages/SystemPackages/DataTrainingPackages/darknet/examples/: detector.c
VisionPackages/SystemPackages/DataTrainingPackages/darknet_AB/: .gitignore  Makefile
VisionPackages/SystemPackages/DataTrainingPackages/darknet_AB/cfg/: broccoli.data  (+15 more)
VisionPackages/SystemPackages/DataTrainingPackages/labelImg/: classes.txt
VisionPackages/SystemPackages/DataTrainingPackages/yolo_label/: CMakeLists.txt  package.xml
VisionPackages/SystemPackages/DetectionPackages/cam_calib/: CMakeLists.txt  package.xml
VisionPackages/SystemPackages/DetectionPackages/cam_calib/scripts/: get_points.py  note.txt  test.py
VisionPackages/SystemPackages/DetectionPackages/cam_to_base_transform/: CMakeLists.txt  package.xml
VisionPackages/SystemPackages/DetectionPackages/cam_to_base_transform/launch/: transform_pub.launch
VisionPackages/SystemPackages/DetectionPackages/cam_to_base_transform/scripts/: transform_pub.py  transform_sub.py
VisionPackages/SystemPackages/DetectionPackages/color_detect/: CMakeLists.txt  package.xml
VisionPackages/SystemPackages/DetectionPackages/image_viewer_capture/: CMakeLists.txt  package.xml
VisionPackages/SystemPackages/DetectionPackages/image_viewer_capture/launch/: astra_subscriber.launch  cam.launch
VisionPackages/SystemPackages/DetectionPackages/image_viewer_capture/params/: common.yaml  path_cam1.yaml  path_cam2.yaml
VisionPackages/SystemPackages/DetectionPackages/image_viewer_capture/src/: multiastra_subscriber.cpp
VisionPackages/SystemPackages/DetectionPackages/opencv_detect/: CMakeLists.txt  package.xml
pose_server/: CMakeLists.txt  package.xml
pose_server/include/pose_server/astra/: data_structure_astra.h  depth_srv_astra.h  pose_srv_astra.h
pose_server/include/pose_server/zed/: data_structure_zed.h  depth_srv_zed.h  pose_srv_zed.h
pose_server/include/pose_server/zivid/: depth_srv_zivid.h  pose_srv_zivid.h
pose_server/launch/astra/: depth_server_astra.launch  pose_server_astra.launch
pose_server/launch/zed/: depth_server_zed.launch  pose_server_zed.launch
pose_server/launch/zivid/: depth_server_zivid.launch  pose_server_zivid.launch
pose_server/msg/: Pose.msg  PoseList.msg
pose_server/params/astra/: common.yaml  common_NUS_Oct19.yaml  common_soft_robotic.yaml
pose_server/params/zed/: common.yaml
pose_server/params/zivid/: common.yaml  common_NUS_old.yaml  common_SUTD.yaml
pose_server/src/astra/: depth_main_astra.cpp  depth_srv_astra.cpp  multi_items.cpp  pose_main_astra.cpp  pose_srv_astra.cpp  pose_srv_astra_cv.cpp  single_item.cpp  utils.cpp
pose_server/src/zed/: depth_main_zed.cpp  depth_srv_zed.cpp  pose_main_zed.cpp  pose_srv_zed.cpp
pose_server/src/zivid/: depth_main_zivid.cpp  depth_srv_zivid.cpp  pose_main_zivid.cpp  pose_srv_zivid.cpp
pose_server/src/zivid/pose_origin/: pose_srv_zivid.cpp
pose_server/srv/: ImgToDepth.srv  PoseSrv.srv  PoseZividSrv.srv
(+100 files in other folders)
